# tauri-nextjs-template

./: .gitignore  README.md  biome.json  next.config.ts  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: layout.tsx  page.test.tsx  page.tsx
src/app/routing-demo/: page.tsx
src/app/routing-demo/dynamic/[id]/: page.tsx
src/app/routing-demo/nested-page/: page.tsx
src/app/routing-demo/section/subsection/: page.tsx
src/app/routing-demo/with-params/: page.tsx
src/components/: RoundedButton.tsx  theme-provider.tsx  theme-switcher.tsx  window-titlebar.tsx
src/components/ui/: button-group.tsx  scroll-area.tsx
src/styles/: globals.css  globals.css.d.ts
